--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
-p {
-
-    color:red;
-
-}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+  }
+  
+  .container {
+    height: 100vh;
+    overflow-y: scroll;
+  }
+  
+  .shade-section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+    transition: background-color 0.5s ease;
+  }
+  
+  .shade-section.light {
+    background-color: #222;
+  }
+  
+  .shade-section.lighter {
+    background-color: #444;
+  }
+  
+  .shade-section.lightest {
+    background-color: #666;
+  }
+  
